[project]
name = "recon-pipeline"
version = "2.0.0"
description = "Authorized reconnaissance pipeline orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.1.3",
  "arjun==2.2.7",
  "sslyze==6.3.1",
  "dnsrecon==0.10.1",
]

[project.scripts]
recon-pipeline = "recon_pipeline:main"

[tool.setuptools]
py-modules = ["recon_pipeline", "webapp"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
